# ai-academy-intro-to-ai

./: Copy of bandit notes.xlsx  pyproject.toml  requirements.txt  vehicle_sales_analysis.ipynb
week-1/Nested Agent Student/: NestedAgent Student.py  WumpusLib.py
week-2/AIA-AI-Week-02-Workshop-Code/: Assignment 2 Student.py  NetworkCode.py  TourOfFrance.py  drawingnetwork.py
week-3/Week 3 Workshop Code-20230726/: Bandit skeleton.py  homes.csv  random_demo.py  zebra constraint prob student.docx
